# Runko

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  Dockerfile  MODULE.bazel  Makefile  OWNERS  PROJECT.yaml  README.md  docker-compose.yml  go.mod  go.sum  sqlc.yaml
buildadapter/: BUILD.bazel  contract_test.go
buildadapter/bazel/: BUILD.bazel  bazel.go  bazel_integration_test.go  bazel_test.go
cli/runko/: BUILD.bazel  ackpolicy.go  agent.go  agentevent.go  agentevent_test.go  agenthooks.go  agenthooks_test.go  agentskill.go  agentskill_test.go  approve.go  approve_test.go  auth.go  auth_test.go  change.go  change_test.go  changecreate.go  changeid.go  changeid_test.go  changelist.go  ci.go  ci_test.go  cmd_auth.go  cmd_change.go  cmd_misc.go  cmd_project.go  cmd_workspace.go  comments.go  describe_test.go  doctor.go  doctor_test.go  exec_test.go  git.go  gitauth.go  gitauth_test.go  github.go  github_test.go  helptext_test.go  jj.go  jj_test.go  land.go  (+28 more)
cli/runko-ci/: BUILD.bazel  affected.go  affected_test.go  binaries.go  binaries_test.go  checkout_test.go  checks.go  checks_test.go  exec_test.go  helptext_test.go  images.go  images_test.go  main.go  main_test.go  reportcheck.go  reportcheck_test.go  reportimage.go  reportimage_test.go  runwhen_test.go  snapshot_test.go  testimpacted.go  testimpacted_test.go
cmd/runko/: BUILD.bazel  approve.go  approve_test.go  auth.go  auth_test.go  change.go  change_test.go  changecreate.go  changelist.go  doctor.go  doctor_test.go  git.go  httperr.go  jj_test.go  land.go  land_test.go  main.go  main_test.go  org.go  project.go  project_test.go  workspace.go  workspace_test.go
cmd/runko-bridge/: BUILD.bazel  main.go  main_test.go
cmd/runko-ci/: BUILD.bazel  affected.go  affected_test.go  checkout.go  checkout_test.go  git.go  main.go  main_test.go  reportcheck.go
cmd/runkod/: BUILD.bazel  main.go  main_test.go
db/: BUILD.bazel  PROJECT.yaml  README.md  migrations.go
db/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_approval_head_sha.down.sql  0002_approval_head_sha.up.sql  0003_landed_by.down.sql  0003_landed_by.up.sql  0004_principals.down.sql  0004_principals.up.sql  0005_change_origin.down.sql  0005_change_origin.up.sql  0006_landed_forced.down.sql  0006_landed_forced.up.sql  0007_org_accounts.down.sql  0007_org_accounts.up.sql  0008_org_settings.down.sql  0008_org_settings.up.sql  0009_org_archive.down.sql  0009_org_archive.up.sql  0010_changes_list_index.down.sql  0010_changes_list_index.up.sql  0011_review_conversation.down.sql  0011_review_conversation.up.sql  0012_releases.down.sql  0012_releases.up.sql  0013_agent_principals.down.sql  0013_agent_principals.up.sql  0014_workspace_events.down.sql  0014_workspace_events.up.sql  0015_automerge.down.sql  0015_automerge.up.sql  0016_workspace_activity.down.sql  0016_workspace_activity.up.sql  0017_per_org_principals.down.sql  0017_per_org_principals.up.sql  0018_landed_list_order.down.sql  0018_landed_list_order.up.sql  0019_invite_requests.down.sql  0019_invite_requests.up.sql  0020_check_run_provenance.down.sql  0020_check_run_provenance.up.sql  (+8 more)
db/queries/: actors.sql  agent_policies.sql  agentprincipals.sql  changes.sql  checks.sql  deploys.sql  invite_requests.sql  mirror.sql  orgs.sql  principals.sql  projects.sql  releases.sql  templates.sql  webhooks.sql  workspace_activity.sql  workspace_events.sql  workspaces.sql
docs/: BUILD.bazel  PROJECT.yaml  README.md  change-lifecycle.md  cli-contract.md  design.md  implementation-log.md  migration-findings.md  mirror.md  parallel-demo-head.md  parallel-demo-side.md  smoke-plan.md
docs/spec/: README.md  project.schema.json
githubapp/: BUILD.bazel  README.md  githubapp.go  githubapp_test.go
index/: BUILD.bazel  scan.go  scan_test.go  sync.go  sync_pg_test.go
internal/clierr/: BUILD.bazel  clierr.go  clierr_test.go
internal/dbgen/: BUILD.bazel  actors.sql.go  agent_policies.sql.go  agentprincipals.sql.go  changes.sql.go  checks.sql.go  db.go  deploys.sql.go  invite_requests.sql.go  mirror.sql.go  models.go  orgs.sql.go  principals.sql.go  projects.sql.go  releases.sql.go  templates.sql.go  webhooks.sql.go  workspace_activity.sql.go  workspace_events.sql.go  workspaces.sql.go
internal/dbtest/: BUILD.bazel  dbtest.go  lock_test.go  migrations_test.go
internal/gitfixture/: BUILD.bazel  clock.go  gitfixture.go  gitfixture_test.go  golden.go  idseq.go
internal/gitstore/: BUILD.bazel  gitstore.go  gitstore_test.go  tag.go  tag_test.go
internal/gitversion/: BUILD.bazel  gitversion.go  gitversion_test.go
land/: BUILD.bazel  doc.go  git.go  land.go  land_test.go  rebase.go  rebase_test.go  revalidate.go  revalidate_test.go
mailer/: BUILD.bazel  PROJECT.yaml  README.md  mailer.go  mailer_test.go  main.go
mcp/: BUILD.bazel  catalog_drift_test.go  client.go  doc.go  protocol_test.go  tools.go  transform.go
platform/affected/: BUILD.bazel  compute.go  compute_direct_test.go  compute_test.go  doc.go  prose_test.go  refinable_test.go
platform/agentsmd/: BUILD.bazel  generate.go  generate_test.go
platform/checks/: BUILD.bazel  checkset.go  checkset_test.go  contract_test.go  deploy_contract_test.go  deploywebhook.go  (+9 more)
runkod/: BUILD.bazel  PROJECT.yaml  README.md  ackpolicy_test.go  actions.go  activity.go  activity_test.go  affectedcache_test.go  agentpolicy_test.go  agentprincipal.go  agentprincipal_test.go  api.go  api_test.go  approve_test.go  auth.go  auth_test.go  automerge.go  automerge_test.go  bootstraporg.go  bootstraporg_test.go  botlane.go  comment_test.go  createproject.go  createproject_test.go  credential.go  deleteproject.go  deleteproject_test.go  deploy_endpoint_test.go  deploy_test.go  deployimages.go  deployimages_test.go  describe.go  describe_test.go  descriptiongate_test.go  diff.go  diff_test.go  doc.go  eventbus.go  eventbus_test.go  github.go  (+68 more)
runkogithubapp/: BUILD.bazel  PROJECT.yaml  README.md  lib.go  runkogithubapp.go  runkogithubapp_test.go
watchdog/: BUILD.bazel  PROJECT.yaml  README.md  main.go  watchdog.go  watchdog_test.go
(+285 files in other folders)
