load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "nogo")

# vet-under-bazel (MODULE.bazel go_sdk.nogo): runs during every build,
# so a vet violation fails compilation - no separate lint lane to forget.
nogo(
    name = "runko_nogo",
    vet = True,
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/saxocellphone/runko
# gazelle:proto disable_global
# gazelle:exclude web
# gazelle:exclude .vite
#
# proto disable_global is load-bearing: the committed *.pb.go under
# runkod/proto/gen (runko/v1, runkov1connect, mailer/v1) must be plain
# go_library targets. Without it gazelle would generate
# proto_library/go_proto_library over runkod/proto/**/*.proto and
# double-define those Go packages. Regeneration stays buf's job
# (runkod/proto/buf.gen.yaml), never bazel's.
gazelle(name = "gazelle")
