# Bazel module for the build graph only (§14.5.4 dogfood): gazelle-generated
# go_library/go_binary/go_test targets feed `bazel query rdeps(...)` for
# affected-computation refinement. Tests are NOT run under bazel - `make
# check` stays the test truth (decided 2026-07-08, docs/migration-findings.md).
module(name = "runko")

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_github_google_uuid",
    "com_github_jackc_pgx_v5",
    "com_github_santhosh_tekuri_jsonschema_v5",
    "in_gopkg_yaml_v3",
    "org_golang_google_protobuf",
)
