load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "land",
    srcs = [
        "doc.go",
        "git.go",
        "land.go",
        "rebase.go",
        "revalidate.go",
    ],
    importpath = "github.com/saxocellphone/runko/land",
    visibility = ["//visibility:public"],
    deps = [
        "//affected",
        "//core",
        "//internal/gitversion",
    ],
)

go_test(
    name = "land_test",
    srcs = [
        "land_test.go",
        "rebase_test.go",
        "revalidate_test.go",
    ],
    embed = [":land"],
    deps = [
        "//affected",
        "//core",
        "//internal/gitfixture",
        "//internal/gitstore",
    ],
)
