load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "mailer_lib",
    srcs = [
        "mailer.go",
        "main.go",
    ],
    importpath = "github.com/saxocellphone/runko/mailer",
    visibility = ["//visibility:private"],
    deps = [
        "//runkod/proto/gen/mailer/v1:mailer",
        "//runkod/proto/gen/mailer/v1/mailerv1connect",
        "@com_connectrpc_connect//:connect",
    ],
)

go_binary(
    name = "mailer",
    embed = [":mailer_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "mailer_test",
    srcs = ["mailer_test.go"],
    embed = [":mailer_lib"],
    deps = [
        "//runkod/proto/gen/mailer/v1:mailer",
        "//runkod/proto/gen/mailer/v1/mailerv1connect",
        "@com_connectrpc_connect//:connect",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
