load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mcp",
    srcs = [
        "client.go",
        "doc.go",
        "jsonrpc.go",
        "tools.go",
        "transform.go",
    ],
    importpath = "github.com/saxocellphone/runko/mcp",
    visibility = ["//visibility:public"],
    deps = [
        "//affected",
        "//index",
        "//search",
    ],
)

go_test(
    name = "mcp_test",
    srcs = [
        "catalog_drift_test.go",
        "protocol_test.go",
    ],
    embed = [":mcp"],
    deps = [
        "//receive",
        "//runkod",
        "//search",
        "@com_github_santhosh_tekuri_jsonschema_v5//:jsonschema",
    ],
)
