load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runkod",
    srcs = [
        "actions.go",
        "api.go",
        "auth.go",
        "botlane.go",
        "createproject.go",
        "credential.go",
        "diff.go",
        "doc.go",
        "gitleaks.go",
        "hook.go",
        "land.go",
        "migrate.go",
        "mirror.go",
        "orghub.go",
        "outbox.go",
        "pgstore.go",
        "prereceive.go",
        "principal.go",
        "repo.go",
        "rpc.go",
        "signup.go",
        "smarthttp.go",
        "store.go",
        "workspace.go",
        "zoekt.go",
    ],
    importpath = "github.com/saxocellphone/runko/runkod",
    visibility = ["//visibility:public"],
    deps = [
        "//affected",
        "//checks",
        "//core",
        "//db",
        "//gen/runko/v1:runko",
        "//gen/runko/v1/runkov1connect",
        "//index",
        "//internal/clierr",
        "//internal/dbgen",
        "//internal/gitstore",
        "//land",
        "//mirror",
        "//project",
        "//receive",
        "//search",
        "@com_connectrpc_connect//:connect",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)

go_test(
    name = "runkod_test",
    srcs = [
        "api_test.go",
        "approve_test.go",
        "auth_test.go",
        "createproject_test.go",
        "diff_test.go",
        "gitleaks_test.go",
        "hook_test.go",
        "land_test.go",
        "lifecycle_test.go",
        "migrate_pg_test.go",
        "mirror_test.go",
        "orghub_test.go",
        "origin_test.go",
        "outbox_test.go",
        "pgstore_pg_test.go",
        "policy_gate_test.go",
        "prereceive_test.go",
        "principal_test.go",
        "rpc_test.go",
        "signup_test.go",
        "snapshot_test.go",
        "stack_test.go",
        "statemachine_test.go",
        "store_test.go",
        "webhook_org_test.go",
        "workspace_test.go",
        "workspacebranch_test.go",
        "zoekt_test.go",
    ],
    embed = [":runkod"],
    deps = [
        "//affected",
        "//checks",
        "//gen/runko/v1:runko",
        "//gen/runko/v1/runkov1connect",
        "//index",
        "//internal/clierr",
        "//internal/dbtest",
        "//internal/gitfixture",
        "//mirror",
        "//receive",
        "//search",
        "@com_connectrpc_connect//:connect",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
