load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runkod",
    srcs = [
        "actions.go",
        "activity.go",
        "agentprincipal.go",
        "api.go",
        "auth.go",
        "automerge.go",
        "botlane.go",
        "createproject.go",
        "credential.go",
        "deleteproject.go",
        "describe.go",
        "diff.go",
        "doc.go",
        "eventbus.go",
        "gitleaks.go",
        "history.go",
        "hook.go",
        "invite.go",
        "invitefeed.go",
        "land.go",
        "landstack.go",
        "migrate.go",
        "mirror.go",
        "orghub.go",
        "outbox.go",
        "pgstore.go",
        "prereceive.go",
        "principal.go",
        "release.go",
        "repo.go",
        "review.go",
        "rpc.go",
        "signup.go",
        "smarthttp.go",
        "store.go",
        "sync.go",
        "tags.go",
        "trivialrebase.go",
        "workspace.go",
        "zoekt.go",
    ],
    importpath = "github.com/saxocellphone/runko/runkod",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "//internal/clierr",
        "//internal/dbgen",
        "//internal/gitstore",
        "//platform/affected",
        "//platform/agentsmd",
        "//platform/checks",
        "//platform/contract",
        "//platform/core",
        "//platform/index",
        "//platform/land",
        "//platform/mirror",
        "//platform/project",
        "//platform/receive",
        "//platform/search",
        "//runkod/proto/gen/mailer/v1:mailer",
        "//runkod/proto/gen/mailer/v1/mailerv1connect",
        "//runkod/proto/gen/runko/v1:runko",
        "//runkod/proto/gen/runko/v1/runkov1connect",
        "@com_connectrpc_connect//:connect",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "runkod_test",
    srcs = [
        "activity_test.go",
        "affectedcache_test.go",
        "agentprincipal_test.go",
        "api_test.go",
        "approve_test.go",
        "auth_test.go",
        "automerge_test.go",
        "comment_test.go",
        "createproject_test.go",
        "deleteproject_test.go",
        "describe_test.go",
        "descriptiongate_test.go",
        "diff_test.go",
        "eventbus_test.go",
        "gitleaks_test.go",
        "history_test.go",
        "hook_test.go",
        "invite_test.go",
        "land_test.go",
        "landstack_test.go",
        "lifecycle_test.go",
        "migrate_pg_test.go",
        "mirror_test.go",
        "orghub_test.go",
        "origin_test.go",
        "outbox_test.go",
        "pgstore_pg_test.go",
        "policy_gate_test.go",
        "prereceive_test.go",
        "principal_test.go",
        "publicread_test.go",
        "release_test.go",
        "rpc_test.go",
        "runwhen_test.go",
        "scancache_test.go",
        "signin_smoke_test.go",
        "signup_test.go",
        "singleuse_test.go",
        "snapshot_test.go",
        "stack_test.go",
        "stacksize_test.go",
        "statemachine_test.go",
        "store_test.go",
        "sync_test.go",
        "tags_test.go",
        "trivialrebase_test.go",
        "webhook_org_test.go",
        "workspace_test.go",
        "workspacebranch_test.go",
        "workspacedelete_test.go",
        "wsevents_test.go",
        "zoekt_test.go",
    ],
    embed = [":runkod"],
    deps = [
        "//internal/clierr",
        "//internal/dbgen",
        "//internal/dbtest",
        "//internal/gitfixture",
        "//internal/gitstore",
        "//platform/affected",
        "//platform/agentsmd",
        "//platform/checks",
        "//platform/core",
        "//platform/index",
        "//platform/land",
        "//platform/mirror",
        "//platform/receive",
        "//platform/search",
        "//runkod/proto/gen/mailer/v1:mailer",
        "//runkod/proto/gen/mailer/v1/mailerv1connect",
        "//runkod/proto/gen/runko/v1:runko",
        "//runkod/proto/gen/runko/v1/runkov1connect",
        "@com_connectrpc_connect//:connect",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
