load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runkogithubapp",
    srcs = ["runkogithubapp.go"],
    importpath = "github.com/saxocellphone/runko/runkogithubapp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "runkogithubapp_test",
    srcs = ["runkogithubapp_test.go"],
    embed = [":runkogithubapp"],
)
