load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "watchdog_lib",
    srcs = [
        "main.go",
        "watchdog.go",
    ],
    importpath = "github.com/saxocellphone/runko/watchdog",
    visibility = ["//visibility:private"],
    deps = ["//platform/checks"],
)

go_binary(
    name = "watchdog",
    embed = [":watchdog_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "watchdog_test",
    srcs = ["watchdog_test.go"],
    embed = [":watchdog_lib"],
    deps = ["//platform/checks"],
)
