load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "runko-ci_lib",
    srcs = [
        "affected.go",
        "checkout.go",
        "git.go",
        "main.go",
        "reportcheck.go",
    ],
    importpath = "github.com/saxocellphone/runko/cli/runko-ci",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/clierr",
        "//internal/gitstore",
        "//platform/affected",
        "//platform/buildadapter",
        "//platform/buildadapter/bazel",
        "//platform/core",
        "//platform/index",
    ],
)

go_binary(
    name = "runko-ci",
    embed = [":runko-ci_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "runko-ci_test",
    srcs = [
        "affected_test.go",
        "checkout_test.go",
        "main_test.go",
        "reportcheck_test.go",
    ],
    embed = [":runko-ci_lib"],
    deps = [
        "//internal/clierr",
        "//internal/gitfixture",
    ],
)
