load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "runko-ci_lib",
    srcs = [
        "affected.go",
        "binaries.go",
        "checkout.go",
        "checks.go",
        "git.go",
        "images.go",
        "main.go",
        "reportcheck.go",
        "reportimage.go",
        "testimpacted.go",
    ],
    importpath = "github.com/saxocellphone/runko/cli/runko-ci",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/clierr",
        "//internal/gitstore",
        "//platform/affected",
        "//platform/buildadapter",
        "//platform/buildadapter/bazel",
        "//platform/core",
        "//platform/deploy",
        "//platform/index",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "runko-ci",
    embed = [":runko-ci_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "runko-ci_test",
    srcs = [
        "affected_test.go",
        "binaries_test.go",
        "checkout_test.go",
        "checks_test.go",
        "exec_test.go",
        "helptext_test.go",
        "images_test.go",
        "main_test.go",
        "reportcheck_test.go",
        "reportimage_test.go",
        "runwhen_test.go",
        "snapshot_test.go",
        "testimpacted_test.go",
    ],
    embed = [":runko-ci_lib"],
    deps = [
        "//internal/clierr",
        "//internal/gitfixture",
        "@com_github_spf13_cobra//:cobra",
    ],
)
