load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "runko_lib",
    srcs = [
        "agent.go",
        "agentevent.go",
        "agenthooks.go",
        "approve.go",
        "auth.go",
        "change.go",
        "changecreate.go",
        "changelist.go",
        "comments.go",
        "doctor.go",
        "git.go",
        "gitauth.go",
        "httperr.go",
        "jj.go",
        "land.go",
        "main.go",
        "materializations.go",
        "org.go",
        "project.go",
        "release.go",
        "sync.go",
        "update.go",
        "watch.go",
        "workspace.go",
        "workspacegc.go",
    ],
    importpath = "github.com/saxocellphone/runko/cli/runko",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/clierr",
        "//internal/gitstore",
        "//internal/gitversion",
        "//platform/agentsmd",
        "//platform/checks",
        "//platform/core",
        "//platform/index",
        "//platform/land",
        "//platform/mcp",
        "//platform/project",
        "//platform/receive",
    ],
)

go_binary(
    name = "runko",
    embed = [":runko_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "runko_test",
    srcs = [
        "agentevent_test.go",
        "agenthooks_test.go",
        "approve_test.go",
        "auth_test.go",
        "change_test.go",
        "describe_test.go",
        "doctor_test.go",
        "gitauth_test.go",
        "jj_test.go",
        "land_test.go",
        "main_test.go",
        "materializations_test.go",
        "project_test.go",
        "sync_test.go",
        "update_test.go",
        "watch_test.go",
        "workspace_test.go",
        "workspacegc_test.go",
    ],
    embed = [":runko_lib"],
    deps = [
        "//internal/clierr",
        "//internal/gitfixture",
        "//platform/checks",
        "//platform/land",
        "//platform/project",
        "//platform/receive",
        "//runkod",
    ],
)
