load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "runko_lib",
    srcs = [
        "agent.go",
        "agentevent.go",
        "agenthooks.go",
        "agentskill.go",
        "approve.go",
        "auth.go",
        "change.go",
        "changecreate.go",
        "changelist.go",
        "ci.go",
        "cmd_auth.go",
        "cmd_change.go",
        "cmd_misc.go",
        "cmd_project.go",
        "cmd_workspace.go",
        "comments.go",
        "doctor.go",
        "git.go",
        "gitauth.go",
        "github.go",
        "httperr.go",
        "jj.go",
        "land.go",
        "main.go",
        "materializations.go",
        "org.go",
        "project.go",
        "release.go",
        "root.go",
        "sync.go",
        "update.go",
        "version.go",
        "watch.go",
        "workspace.go",
        "workspacegc.go",
    ],
    importpath = "github.com/saxocellphone/runko/cli/runko",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/clierr",
        "//internal/gitstore",
        "//internal/gitversion",
        "//platform/agentsmd",
        "//platform/checks",
        "//platform/core",
        "//platform/index",
        "//platform/land",
        "//platform/mcp",
        "//platform/project",
        "//platform/receive",
        "//templates/ci",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "runko",
    embed = [":runko_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "runko_test",
    srcs = [
        "agentevent_test.go",
        "agenthooks_test.go",
        "agentskill_test.go",
        "approve_test.go",
        "auth_test.go",
        "change_test.go",
        "ci_test.go",
        "describe_test.go",
        "doctor_test.go",
        "exec_test.go",
        "gitauth_test.go",
        "github_test.go",
        "helptext_test.go",
        "jj_test.go",
        "land_test.go",
        "main_test.go",
        "materializations_test.go",
        "org_test.go",
        "project_test.go",
        "root_test.go",
        "sync_test.go",
        "update_test.go",
        "version_test.go",
        "watch_test.go",
        "workspace_test.go",
        "workspacegc_test.go",
    ],
    embed = [":runko_lib"],
    deps = [
        "//internal/clierr",
        "//internal/gitfixture",
        "//platform/agentsmd",
        "//platform/checks",
        "//platform/land",
        "//platform/project",
        "//platform/receive",
        "//runkod",
        "@com_github_spf13_cobra//:cobra",
    ],
)
