load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "runkod_lib",
    srcs = ["main.go"],
    importpath = "github.com/saxocellphone/runko/cmd/runkod",
    visibility = ["//visibility:private"],
    deps = [
        "//mirror",
        "//receive",
        "//runkod",
        "//search",
    ],
)

go_binary(
    name = "runkod",
    embed = [":runkod_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "runkod_test",
    srcs = ["main_test.go"],
    embed = [":runkod_lib"],
    deps = ["//internal/dbtest"],
)
