load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitfixture",
    srcs = [
        "clock.go",
        "gitfixture.go",
        "golden.go",
        "idseq.go",
    ],
    importpath = "github.com/saxocellphone/runko/internal/gitfixture",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "gitfixture_test",
    srcs = ["gitfixture_test.go"],
    data = glob(["testdata/**"]),
    embed = [":gitfixture"],
)
