load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitstore",
    srcs = ["gitstore.go"],
    importpath = "github.com/saxocellphone/runko/internal/gitstore",
    visibility = ["//:__subpackages__"],
    deps = ["//core"],
)

go_test(
    name = "gitstore_test",
    srcs = ["gitstore_test.go"],
    embed = [":gitstore"],
    deps = [
        "//core",
        "//internal/gitfixture",
    ],
)
